--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title> Krisitna Mozgovaia - Personal Website</title> 
+    <title> Your Name - Personal Website</title> 
     <style> 
         /* Basic global styles */ 
         body { 
@@ -97,8 +97,8 @@
  
     <!-- Header --> 
     <header> 
-        <h1>Your Name</h1> 
-        <p>Welcome! I study economics with a focus on development and policy.</p> 
+        <h1>Kristina Mozgovaia</h1> 
+        <p>Welcome! I study economics with a focus on Macroeconomics and Wine Economics.</p> 
     </header> 
  
     <!-- Profile Section --> 
