--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
                 in Economics from [university]. My research explores [topics you're interested in]. 
             </p> 
             <p><strong>Email:</strong> your.email@example.com</p> 
+            <a href="https://www.linkedin.com/in/kristina-mozgovaia-45135461/">LinkedIn</a>
+            
         </div> 
     </div> 
  
