--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     <!-- Header --> 
     <header> 
         <h1>Kristina Mozgovaia</h1> 
-        <p>Hi! I am a 5th year PhD student at the Center for Economic Research and Graduate Education - Economics Institute in Prague, Czech Republic ( <a href="https://www.cerge-ei.cz/">CERGE-EI</a>). 
+        <p>Hi! I am a 5th year PhD student at the Center for Economic Research and Graduate Education - Economics Institute in Prague, 
+            Czech Republic ( <a href="https://www.cerge-ei.cz/">CERGE-EI</a>). 
             My supervisor is Marek Kapicka (University of Chicago). </p> 
     </header> 
  
