--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
     <!-- Header --> 
     <header> 
         <h1>Kristina Mozgovaia</h1> 
-        <p>Hi! I am a 5th year PhD student at the Center for Economic Research and Graduate Education - Economics Institute in Prague, 
-            Czech Republic ( <a href="https://www.cerge-ei.cz/">CERGE-EI</a>). 
-            My supervisor is Marek Kapicka (University of Chicago). </p> 
+        
     </header> 
  
     <!-- Profile Section --> 
@@ -108,11 +106,15 @@
         <img src="your-profile-picture.jpg" alt="Your Name"> 
         <div class="bio"> 
             <p> 
-                I am a researcher in Economics, focusing on topics like [add your focus areas].  
-                Currently, I am affiliated with [your institution]. In [year], I completed my Ph.D.  
-                in Economics from [university]. My research explores [topics you're interested in]. 
+                Hi! I am a 5th year PhD student at the Center for Economic Research and Graduate Education - Economics Institute in Prague, 
+                Czech Republic ( <a href="https://www.cerge-ei.cz/">CERGE-EI</a>). 
+                My supervisor is <a href="https://sites.google.com/site/mkapicka/home?authuser=0">Marek Kapicka</a>
+                I am a researcher in Economics, focusing on topics like Macroeconomics, Public Policy and Wine Economics.  
+
+                I visited ETH Zurich, hosted by <a href="https://sites.google.com/view/lucasbretschgerweb/startseite">Lucas Bretschger</a> in April 2023.
+
             </p> 
-            <p><strong>Email:</strong> your.email@example.com</p> 
+            <p><strong>Email:</strong> kristina.Mozgovaia@cerge-ei.cz</p> 
             <a href="https://www.linkedin.com/in/kristina-mozgovaia-45135461/">LinkedIn</a>
             
         </div> 
