--- a/index.html
+++ b/index.html
@@ -108,10 +108,11 @@
             <p> 
                 Hi! I am a 5th year PhD student at the Center for Economic Research and Graduate Education - Economics Institute in Prague, 
                 Czech Republic ( <a href="https://www.cerge-ei.cz/">CERGE-EI</a>). 
-                My supervisor is <a href="https://sites.google.com/site/mkapicka/home?authuser=0">Marek Kapicka</a>
-                I am a researcher in Economics, focusing on topics like Macroeconomics, Public Policy and Wine Economics.  
+                My supervisor is <a href="https://sites.google.com/site/mkapicka/home?authuser=0">Marek Kapicka</a>.\
+            <p>
+                I am focusing on topics like Macroeconomics, Public Policy and Wine Economics.  
 
-                I visited ETH Zurich, hosted by <a href="https://sites.google.com/view/lucasbretschgerweb/startseite">Lucas Bretschger</a> in April 2023.
+                I visited ETH Zurich, Center of Economic Research, hosted by <a href="https://sites.google.com/view/lucasbretschgerweb/startseite">Lucas Bretschger</a> in April 2023.
 
             </p> 
             <p><strong>Email:</strong> kristina.Mozgovaia@cerge-ei.cz</p> 
