--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <p> 
                 Hi! I am a 5th year PhD student at the Center for Economic Research and Graduate Education - Economics Institute in Prague, 
                 Czech Republic ( <a href="https://www.cerge-ei.cz/">CERGE-EI</a>). 
-                My supervisor is <a href="https://sites.google.com/site/mkapicka/home?authuser=0">Marek Kapicka</a>.\
+                My supervisor is <a href="https://sites.google.com/site/mkapicka/home?authuser=0">Marek Kapicka</a>.
             <p>
                 I am focusing on topics like Macroeconomics, Public Policy and Wine Economics.  
 
