--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
         <h2>Working Papers</h2> 
         <ul> 
             <li> 
-                <strong>A Rosetta Stone for Human Capital</strong> (with Justin Sandefur) <br> 
+                <strong>Pro-environmental Habits in a Neoclassical Growth Model</strong> <br> 
                 <a href="#">Abstract</a> | <a href="#">PDF</a> | <a href="#">Coverage</a> 
             </li> 
             <li> 
-                <strong>Environmental Beliefs and Adaptation to Climate Change</strong> <br> 
+                <strong>Overcoming Habit Formation in the Production of Wine</strong> <br> 
                 <a href="#">Abstract</a> | <a href="#">PDF</a> | <a href="#">Survey Instruments</a> | <a href="#">Coverage</a> 
             </li> 
         </ul> 
