--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 I visited ETH Zurich, Center of Economic Research, hosted by <a href="https://sites.google.com/view/lucasbretschgerweb/startseite">Lucas Bretschger</a> in April 2023.
 
             </p> 
+<!--             <p><strong>My CV</strong> is available <a href="CV.pdf" target="_blank" style="text-decoration: none; color: #007bff;">here</a></p> -->
             <p><strong>Email:</strong> kristina.Mozgovaia@cerge-ei.cz</p> 
             <a href="https://www.linkedin.com/in/kristina-mozgovaia-45135461/">LinkedIn</a>
             
@@ -126,7 +127,7 @@
         <h2>Working Papers</h2> 
         <ul> 
             <li> 
-                <strong>Pro-environmental Habits in a Neoclassical Growth Model</strong> <br> 
+                <strong>Pro-Environmental Habits in a Neoclassical Growth Model</strong> <br> 
                 <a href="#">Abstract</a> | <a href="#">PDF</a> | <a href="#">Coverage</a> 
             </li> 
             <li> 
@@ -137,7 +138,7 @@
     </section> 
  
     <!-- Publications Section --> 
-    <section id="publications"> 
+<!--     <section id="publications"> 
         <h2>Publications</h2> 
         <ul> 
             <li> 
@@ -146,7 +147,7 @@
                 (with Girija Bahety, Sebastian Bauhoff, and James Potter) 
             </li> 
         </ul> 
-    </section> 
+    </section>  -->
  
     <!-- Footer --> 
     <footer> 
