--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <!-- Profile Section --> 
     <div class="profile"> 
         <img src="your-profile-picture.jpg" alt="Your Name"> 
+<!--         <img src="photo.jpg" alt="My Photo" class="profile-image">  class can be deleted-->
         <div class="bio"> 
             <p> 
                 Hi! I am a 5th year PhD student at the Center for Economic Research and Graduate Education - Economics Institute in Prague, 
