--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head> 
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title> Your Name - Personal Website</title> 
+    <title> Kristina Mozogvaia </title> 
+    <meta name="description" content=" personal website of an economist Kristina Mozgovaia, PhD student at CERGE-EI"> 
+    <meta name="keywords" content="Kristina Mozgovaia, Kristina Mozgovaia econ, Kristina Mozgovaia wine economics"> 
+    <meta name="author" content="Kristina Mozgovaia"> 
+
+    
     <style> 
         /* Basic global styles */ 
         body { 
