--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Kristina Mozgovaia, Kristina Mozgovaia econ, Kristina Mozgovaia wine economics"> 
     <meta name="author" content="Kristina Mozgovaia"> 
 
+    <meta name="google-site-verification" content="pEoNLY9M07P3-uEHTKKJcSW07QodUqU352qO5PWs9i0" />
     
     <style> 
         /* Basic global styles */ 
