--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title> Kristina Mozogvaia </title> 
     <meta name="description" content=" personal website of an economist Kristina Mozgovaia, PhD student at CERGE-EI"> 
-    <meta name="keywords" content="Kristina Mozgovaia, Kristina Mozgovaia econ, Kristina Mozgovaia wine economics"> 
+    <meta name="keywords" content="Kristina Mozgovaia, Kristina Mozgovaia econ, Kristina Mozgovaia github, Kristina Mozgovaia wine economics"> 
     <meta name="author" content="Kristina Mozgovaia"> 
 
    <meta name="google-site-verification" content="N9WmDSr0nSDTrjC2iXyWG7Hg7iS4UgjGWzq4jNBc6YA" />
