--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 I visited ETH Zurich, Center of Economic Research, hosted by <a href="https://sites.google.com/view/lucasbretschgerweb/startseite">Lucas Bretschger</a> in April 2023.
 
             </p> 
-<!--             <p><strong>My CV</strong> is available <a href="CV.pdf" target="_blank" style="text-decoration: none; color: #007bff;">here</a></p> -->
+           <p><strong>My CV</strong> is available <a href="CV_Kristina_2025.pdf" target="_blank" style="text-decoration: none; color: #007bff;">here</a></p>
             <p><strong>Email:</strong> kristina.Mozgovaia@cerge-ei.cz</p> 
             <a href="https://www.linkedin.com/in/kristina-mozgovaia-45135461/">LinkedIn</a>
             
