--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!-- Profile Section --> 
     <div class="profile"> 
         <img src="your-profile-picture.jpg" alt="Your Name"> 
-<!--         <img src="photo.jpg" alt="My Photo" class="profile-image">  class can be deleted-->
+        <img src="IMG_0880.jpg" alt="My Photo" class="profile-image">  
         <div class="bio"> 
             <p> 
                 Hi! I am a 5th year PhD student at the Center for Economic Research and Graduate Education - Economics Institute in Prague, 
