--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         } 
  
         .profile img { 
-            max-width: 150px; 
-            border-radius: 50%; 
+            max-width: 70%; 
+            border-radius: 5%; 
         } 
  
         .profile .bio { 
@@ -109,7 +109,7 @@
  
     <!-- Profile Section --> 
     <div class="profile"> 
-        <img src="your-profile-picture.jpg" alt="Your Name"> 
+<!--         <img src="your-profile-picture.jpg" alt="Your Name">  -->
         <img src="IMG_0880.jpg" alt="My Photo" class="profile-image">  
         <div class="bio"> 
             <p> 
