--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         } 
  
         .profile img { 
-            max-width: 70%; 
+            max-width: 50%; 
             border-radius: 5%; 
         } 
  
@@ -158,7 +158,7 @@
  
     <!-- Footer --> 
     <footer> 
-        <p>© 2025 Your Name. All rights reserved.</p> 
+        <p>© 2025 Kristina Mozgovaia. All rights reserved.</p> 
     </footer> 
  
 </body> 
