--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
  
         .profile img { 
             max-width: 30%; 
-            border-radius: 5%; 
+            border-radius: 5%;
+            margin-right: 20px;
         } 
  
         .profile .bio { 
