--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="bio"> 
             <p> 
                 Hi! I am a 5th year PhD student at the Center for Economic Research and Graduate Education - Economics Institute in Prague, 
-                Czech Republic ( <a href="https://www.cerge-ei.cz/">CERGE-EI</a>). 
+                Czech Republic (<a href="https://www.cerge-ei.cz/">CERGE-EI</a>). 
                 My supervisor is <a href="https://sites.google.com/site/mkapicka/home?authuser=0">Marek Kapicka</a>.
             <p>
                 I am focusing on topics like Macroeconomics, Public Policy and Wine Economics.  
@@ -124,7 +124,7 @@
 
             </p> 
            <p><strong>My CV</strong> is available <a href="CV_Kristina_2025.pdf" target="_blank" style="text-decoration: none; color: #007bff;">here</a></p>
-            <p><strong>Email:</strong> kristina.Mozgovaia@cerge-ei.cz</p> 
+            <p><strong>Email:</strong> <a href = "mail to: Kristina.Mozgovaia@cerge-ei.cz"> Kristina.Mozgovaia@cerge-ei.cz</a></p> 
             <a href="https://www.linkedin.com/in/kristina-mozgovaia-45135461/">LinkedIn</a>
             
         </div> 
