--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             </nav>
 
             <div class="contact-info">
-                <a href="/cdn-cgi/l/email-protection#266d544f55524f4847086b495c414950474f476645435441430b434f08455c"><span class="__cf_email__" data-cfemail="f7bc859e84839e9996d9ba988d909881969e96b79492859092da929ed9948d">[email&#160;protected]</span></a>
+                <a href="mailto:Kristina.Mozgovaia@cerge-ei.cz">Kristina.Mozgovaia[at]cerge-ei.cz</a>
                 
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/kristina-mozgovaia-45135461/" target="_blank" rel="noopener">LinkedIn</a>
@@ -380,7 +380,7 @@
             <section id="about">
                 <h2>About</h2>
                 <div class="bio-text">
-                    <p>I am a 5th year PhD student at the <a href="https://www.cerge-ei.cz/" target="_blank">Center for Economic Research and Graduate Education - Economics Institute</a> in Prague, Czech Republic (CERGE-EI). My supervisor is <a href="https://sites.google.com/site/mkapicka/home?authuser=0" target="_blank">Marek Kapicka</a>.</p>
+                    <p>I am a 6th year PhD student at the <a href="https://www.cerge-ei.cz/" target="_blank">Center for Economic Research and Graduate Education - Economics Institute</a> in Prague, Czech Republic (CERGE-EI). My supervisor is <a href="https://sites.google.com/site/mkapicka/home?authuser=0" target="_blank">Marek Kapicka</a>.</p>
                     <p>I am focusing on topics like Macroeconomics, Public Policy and Wine Economics. I visited ETH Zurich, Center of Economic Research, hosted by <a href="https://sites.google.com/view/lucasbretschgerweb/startseite" target="_blank">Lucas Bretschger</a> in April 2023.</p>
                 </div>
             </section>
@@ -417,7 +417,7 @@
                     </li>
                 </ul>
      
-    </section>  -->
+    </section>  
  
     <!-- Footer --> 
     <footer> 
@@ -426,4 +426,5 @@
  
 </body> 
 </html>
+
 
