--- a/index.html
+++ b/index.html
@@ -421,10 +421,11 @@
  
     <!-- Footer --> 
     <footer> 
-        <p>В© 2025  Kristina Mozgovaia. All rights reserved.</p> 
+        <p>© 2025  Kristina Mozgovaia. All rights reserved.</p> 
     </footer> 
  
 </body> 
 </html>
+
 
 
